--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
             <input type="text" placeholder="Full Name" required>
             <input type="email" placeholder="Email" required>
             <input type="password" placeholder="Password" required>
-            <button type="submit" class="btn">Register</button>
+            <button type="submit" class="btn">Next</button>
         </form>
         <p>Already have an account? <a href="login.html">Login</a></p>
     </div>
